# kuri_mbzirc_challenge_2

./: .travis.yml  CMakeLists.txt  README.md  mbzirc.rosinstall  package.xml  smach_actionlib_server_template.py
kuri_mbzirc_challenge_2/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2/launch/: challenge_2.launch  challenge_2_real.launch  challenge_2_real_husky.launch  challenge_2_real_kinect.launch  husky.launch  husky_kinect.launch  husky_kinect_normal.launch  husky_kinect_ur5.launch  husky_velodyne.launch  husky_velodyne_ur5.launch  record_rosbag.launch  test_exploration.launch  wrench_detection_kinect2.launch
kuri_mbzirc_challenge_2/rviz/: kinect.rviz  velodyne.rviz
kuri_mbzirc_challenge_2/scripts/: convert_rosbag_to_gpxviewer_points.py  huskynavigation_action_server.py
kuri_mbzirc_challenge_2/scripts/old/: explore.py  huskynavigation_action_server.py
kuri_mbzirc_challenge_2/scripts/utility/: gps_plot.py  odometry_plot.py  rosbag_play_synchronized.py
kuri_mbzirc_challenge_2/src/: process_velodyne_rosbag.cpp
kuri_mbzirc_challenge_2/src/coordinator/scripts/: mbzirc_6.0.py
kuri_mbzirc_challenge_2/urdf/: sick_lms1xx.urdf.xacro
kuri_mbzirc_challenge_2_arm_motion/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_arm_motion/scripts/: Move_arm.py
kuri_mbzirc_challenge_2_detecting_panel/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_detecting_panel/launch/: ar_pose_single_kinect_husky.launch
kuri_mbzirc_challenge_2_detecting_panel/scripts/: explore.py  explore2.py  move_to_panel.py  orson_autonomous_PR2.py  test_waypoint.py
kuri_mbzirc_challenge_2_detecting_panel/src/: detect_panel.cpp  determine_wall.cpp
kuri_mbzirc_challenge_2_exploration/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_exploration/config/: exploration.yaml
kuri_mbzirc_challenge_2_exploration/detect_goal/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_exploration/detection_velo/: package.xml
kuri_mbzirc_challenge_2_exploration/detection_velo/include/detection_velo/: detection.h  panel_searching.cpp
kuri_mbzirc_challenge_2_exploration/detection_velo/src/: main.cpp
kuri_mbzirc_challenge_2_exploration/husky_wp/: CMakeLists.txt
kuri_mbzirc_challenge_2_exploration/include/kuri_mbzirc_challenge_2_exploration/: box_location.h  gps_conversion.h  pointcloud_gps_filter.h
kuri_mbzirc_challenge_2_exploration/launch/: test_gps_filter_velodyne.launch
kuri_mbzirc_challenge_2_exploration/src/: box_location.cpp  gps_conversion.cpp  pointcloud_gps_filter.cpp  test_gps_filter_velodyne.cpp  velodyne_box_detector.cpp
kuri_mbzirc_challenge_2_locating_panel/: read_me.txt  readme.txt
kuri_mbzirc_challenge_2_locating_panel/detect_goal/: CMakeLists.txt~
kuri_mbzirc_challenge_2_locating_panel/detect_goal/launch/: find_goal_point.launch  velodyne_part.launch  velodyne_part.launch~
kuri_mbzirc_challenge_2_locating_panel/detect_goal/src/: tf_listener.cpp  tf_listener_class.cpp
kuri_mbzirc_challenge_2_locating_panel/detection_velo/: CMakeLists.txt  CMakeLists.txt~  README.md
kuri_mbzirc_challenge_2_locating_panel/detection_velo/src/: conversion.cpp~  main.cpp~
kuri_mbzirc_challenge_2_locating_panel/husky_wp/: package.xml
kuri_mbzirc_challenge_2_locating_panel/husky_wp/launch/: FE_setup.launch~  hec.launch~  hec_only 2.0.launch~  hec_only.launch~  hec_only2.0.launch~  husky_nav_part.launch  husky_nav_part_standby.launch~  panel_detection_main.launch  panel_detection_main.launch~  velodyne_part.launch~  wp.launch~  wp_building.launch  wp_building.launch~  wp_ori.launch~
kuri_mbzirc_challenge_2_locating_panel/husky_wp/params/: pre-defined-path2.txt~  pre-defined_building.txt~
kuri_mbzirc_challenge_2_locating_panel/husky_wp/src/: autonomous.py  autonomous_PR2.py~  autonomous_backNforth.py  autonomous_backNforth.py~  autonomous_building.py  autonomous_building.py~  autonomous_mod.py~  autonomous_standby.py~
kuri_mbzirc_challenge_2_locating_panel/velodyne_select_goal/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_locating_panel/velodyne_select_goal/src/: tf_listener.cpp  tf_listener.cpp~  tf_listener_class.cpp~
kuri_mbzirc_challenge_2_msgs/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_msgs/action/: Huskynav.action
kuri_mbzirc_challenge_2_panel_detection/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_panel_detection/include/kuri_mbzirc_challenge_2_panel_detection/: velodyne_box_detector.h
kuri_mbzirc_challenge_2_panel_detection/scripts/: move_to_panel.py  panel_waypoint.py  test_velodyne_box_detection.py
kuri_mbzirc_challenge_2_panel_detection/src/: circumnavigation_waypoints.cpp  detect_panel.cpp  test_velodyne_alignment.cpp  velodyne_box_detector.cpp
kuri_mbzirc_challenge_2_system_coordinator/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_system_coordinator/ch2_state_machine/: CMakeLists.txt  CMakeLists.txt~  package.xml
kuri_mbzirc_challenge_2_system_coordinator/ch2_state_machine/src/: state_machine_simp.py~
kuri_mbzirc_challenge_2_system_coordinator/scripts/: state_machine.py  state_machine_simp.py
kuri_mbzirc_challenge_2_tools/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_tools/include/kuri_mbzirc_challenge_2_tools/: pose_conversion.h
kuri_mbzirc_challenge_2_tools/scripts/: plot_gps_sentence.py
kuri_mbzirc_challenge_2_wrench_detection/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_2_wrench_detection/scripts/: panel_detection.py  panel_detection_kinect2_pose.py  wrench_detection.py  wrench_detection_kinect2_pose.py  wrench_detection_softkinetic.py  wrench_detection_v2.py  wrench_detection_v3.py
kuri_mbzirc_challenge_2_wrench_detection/scripts/old/: panel_detection_gazebo.py  panel_detection_kinect2.py  panel_detection_kinect2_pose.py  wrench_detection_kinect2_pose.py
kuri_mbzirc_challenge_2_wrench_detection/src/: kuri_wrench_detection.cpp
launch/: husky.launch  husky.launch~  husky_ur5.launch
rviz/: lol.rviz
scripts/: explore.py  huskynavigation_action_client.py  huskynavigation_action_server.py  task_2_cheat_fede.py  ur5_cli.py
(+6 files in other folders)
